--- a/notebooks/plotting.ipynb
+++ b/notebooks/plotting.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "[1, 1, 1, 1, 1, 1, 1, 1]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +107,16 @@
    "source": [
     "## Add noise\n",
     "\n",
-    "Noise rate in Hertz per plane"
+    "Noise rate in Hertz per plane. MM had a peak of 70kHz per strip, here we have 10 strips/plane"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_detector.add_noise('constant', 10000000)"
+    "my_detector.add_noise('constant', 70*1e3*100)"
    ]
   },
   {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "<module 'plotting.plotting' from '../plotting/plotting.py'>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31d0c59041934ae9bbb6f20c59cca236",
+       "model_id": "66b1391df8a0460d8b6658a8c78527e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,15 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax.show()"
-   ]
   },
   {
    "cell_type": "code",
