general updates and specific for MDT

--- a/notebooks/plotting-mdt.ipynb
+++ b/notebooks/plotting-mdt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Initializing detector --\n",
+      "-- Reading card --\n"
+     ]
+    }
+   ],
    "source": [
     "my_detector = detector.Detector()\n",
     "my_detector.read_card('../cards/atlas_mdt.yml')\n",
@@ -68,15 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_detector.reset_planes()\n",
     "my_detector.add_muon(\n",
-    "        mu_x=0., \n",
+    "        mu_x=40., \n",
     "        mu_y=0., \n",
-    "        mu_theta=0., \n",
+    "        mu_theta=0.2, \n",
     "        mu_phi=0, \n",
     "        mu_time=0\n",
     "    )"
@@ -93,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of hits: 3\n",
+      "Total number of hits: 2\n",
+      "Total number of hits: 1\n",
+      "Total number of hits: 4\n",
+      "Total number of hits: 3\n",
+      "Total number of hits: 4\n"
+     ]
+    }
+   ],
    "source": [
     "sigs = my_detector.get_signals(summary=True)"
    ]
@@ -125,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'plotting.plotting' from '../plotting/plotting.py'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import importlib\n",
     "importlib.reload(plotting)"
@@ -144,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +197,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69473818bd9c417a84aea239d0c09e01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found muon signal, plane  0  xseg  6  time  5.851591168328105\n",
+      "Found muon signal, plane  1  xseg  6  time  25.002891086153227\n",
+      "Found muon signal, plane  2  xseg  6  time  3.356862432459775\n",
+      "Found muon signal, plane  3  xseg  8  time  -8.96169161333403\n",
+      "Found muon signal, plane  4  xseg  7  time  17.320609544241034\n",
+      "Found muon signal, plane  5  xseg  8  time  14.076364453613259\n",
+      "[Point3D(40, 0, 0)] [Point3D(51388424484040840/490033288920621, 0, 320)]\n"
+     ]
+    }
+   ],
    "source": [
     "fig = plt.figure()\n",
     "ax = plt.axes(projection='3d')\n",
@@ -165,9 +237,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00171578ad974f5fab4461da6548fd54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skip hit 3\n",
+      "[Point3D(18607984902849340/490033288920621, 0, -10)] [Point3D(53772456453582040/490033288920621, 0, 344)]\n"
+     ]
+    }
+   ],
    "source": [
     "fig2 = plt.figure(figsize=(6,6*1.18))\n",
     "ax2 = plt.axes()\n",
@@ -177,9 +272,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3a424a5bf434ddd92e5edbd00b7c93a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Point3D(18607984902849340/490033288920621, 0, -10)] [Point3D(53772456453582040/490033288920621, 0, 344)]\n"
+     ]
+    }
+   ],
    "source": [
     "fig3 = plt.figure(figsize=(6,6*1.18))  # good for 10-tube wide atlas_mdt.yml\n",
     "#fig3 = plt.figure(figsize=(28,6))   # good for 56-tube wide atlas_mdt_eml1.yml\n",
