updates for MDT

--- a/notebooks/plotting-mdt.ipynb
+++ b/notebooks/plotting-mdt.ipynb
@@ -136,12 +136,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of hits: 3\n",
-      "Total number of hits: 2\n",
       "Total number of hits: 1\n",
       "Total number of hits: 4\n",
-      "Total number of hits: 3\n",
-      "Total number of hits: 4\n"
+      "Total number of hits: 4\n",
+      "Total number of hits: 2\n",
+      "Total number of hits: 2\n",
+      "Total number of hits: 3\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69473818bd9c417a84aea239d0c09e01",
+       "model_id": "e926bbbc49504fc9bb992d548ce955eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,12 +218,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found muon signal, plane  0  xseg  6  time  5.851591168328105\n",
-      "Found muon signal, plane  1  xseg  6  time  25.002891086153227\n",
-      "Found muon signal, plane  2  xseg  6  time  3.356862432459775\n",
-      "Found muon signal, plane  3  xseg  8  time  -8.96169161333403\n",
-      "Found muon signal, plane  4  xseg  7  time  17.320609544241034\n",
-      "Found muon signal, plane  5  xseg  8  time  14.076364453613259\n",
+      "Found muon signal, plane  0  xseg  6  time  6.649102859287053\n",
+      "Found muon signal, plane  1  xseg  6  time  -132.60182020056507\n",
+      "Found muon signal, plane  2  xseg  6  time  0.3788513482360592\n",
+      "Found muon signal, plane  3  xseg  8  time  -4.116794400290412\n",
+      "Found muon signal, plane  4  xseg  7  time  5.30418712503554\n",
+      "Found muon signal, plane  5  xseg  8  time  13.98570574990666\n",
       "[Point3D(40, 0, 0)] [Point3D(51388424484040840/490033288920621, 0, 320)]\n"
      ]
     }
@@ -243,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00171578ad974f5fab4461da6548fd54",
+       "model_id": "af6eeca5308741f3b280e1003de2df7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +258,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "skip hit 2\n",
       "skip hit 3\n",
+      "skip hit 1\n",
       "[Point3D(18607984902849340/490033288920621, 0, -10)] [Point3D(53772456453582040/490033288920621, 0, 344)]\n"
      ]
     }
@@ -278,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3a424a5bf434ddd92e5edbd00b7c93a",
+       "model_id": "0c90f8f0ace94f678e80c347a591d60d",
        "version_major": 2,
        "version_minor": 0
       },
