small tweaks to explain noise for MDTs

--- a/notebooks/plotting-mdt.ipynb
+++ b/notebooks/plotting-mdt.ipynb
@@ -108,7 +108,8 @@
    "source": [
     "## Add noise\n",
     "\n",
-    "Noise rate in Hertz per plane. MM had a peak of 70kHz per strip, here we have 10 strips/plane"
+    "Noise rate in Hertz per plane. MM had a peak of 70kHz per strip, here we have 10 strips/plane.\n",
+    "Noise rate for MDT EML1 is 150 kHz per tube @HL-LHC, rate per plane is # tubes/plane times that rate."
    ]
   },
   {
@@ -117,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_detector.add_noise('constant', 20*1e3*100)"
+    "my_detector.add_noise('constant', 10*150*1e3)"
    ]
   },
   {
@@ -136,12 +137,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Total number of hits: 2\n",
+      "Total number of hits: 3\n",
+      "Total number of hits: 2\n",
       "Total number of hits: 1\n",
       "Total number of hits: 4\n",
-      "Total number of hits: 4\n",
-      "Total number of hits: 2\n",
-      "Total number of hits: 2\n",
-      "Total number of hits: 3\n"
+      "Total number of hits: 1\n"
      ]
     }
    ],
@@ -203,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e926bbbc49504fc9bb992d548ce955eb",
+       "model_id": "8eddf556bc2842a09299e0017b6fd832",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,12 +219,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found muon signal, plane  0  xseg  6  time  6.649102859287053\n",
-      "Found muon signal, plane  1  xseg  6  time  -132.60182020056507\n",
-      "Found muon signal, plane  2  xseg  6  time  0.3788513482360592\n",
-      "Found muon signal, plane  3  xseg  8  time  -4.116794400290412\n",
-      "Found muon signal, plane  4  xseg  7  time  5.30418712503554\n",
-      "Found muon signal, plane  5  xseg  8  time  13.98570574990666\n",
+      "Found muon signal, plane  0  xseg  6  time  14.169115490406776\n",
+      "Found muon signal, plane  1  xseg  6  time  -198.22018267450355\n",
+      "Found muon signal, plane  2  xseg  6  time  -8.319829324194565\n",
+      "Found muon signal, plane  3  xseg  8  time  -10.400185363650863\n",
+      "Found muon signal, plane  4  xseg  7  time  1.935083102486576\n",
+      "Found muon signal, plane  5  xseg  8  time  3.4947328515494838\n",
       "[Point3D(40, 0, 0)] [Point3D(51388424484040840/490033288920621, 0, 320)]\n"
      ]
     }
@@ -243,7 +244,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af6eeca5308741f3b280e1003de2df7b",
+       "model_id": "1c1d67a8280b41c09d7dfec83002af70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +260,6 @@
      "output_type": "stream",
      "text": [
       "skip hit 2\n",
-      "skip hit 3\n",
       "skip hit 1\n",
       "[Point3D(18607984902849340/490033288920621, 0, -10)] [Point3D(53772456453582040/490033288920621, 0, 344)]\n"
      ]
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c90f8f0ace94f678e80c347a591d60d",
+       "model_id": "dfc8fa1811664bc8bf0b1d62f2485a59",
        "version_major": 2,
        "version_minor": 0
       },
