multiple updates for NSW and noise

--- a/notebooks/plotting.ipynb
+++ b/notebooks/plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Initializing detector --\n",
+      "-- Reading card --\n"
+     ]
+    }
+   ],
    "source": [
     "my_detector = detector.Detector()\n",
-    "my_detector.read_card('../cards/atlas_nsw.yml')"
+    "#my_detector.read_card('../cards/atlas_nsw.yml')\n",
+    "my_detector.read_card('../cards/atlas_nsw_large.yml')"
    ]
   },
   {
@@ -67,15 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_detector.reset_planes()\n",
     "my_detector.add_muon(\n",
-    "        mu_x=0, \n",
+    "        mu_x=-1100, \n",
     "        mu_y=0, \n",
-    "        mu_theta=0, \n",
+    "        mu_theta=0.140, \n",
     "        mu_phi=0, \n",
     "        mu_time=0\n",
     "    )"
@@ -87,16 +108,16 @@
    "source": [
     "## Add noise\n",
     "\n",
-    "Noise rate in Hertz per plane. MM had a peak of 70kHz per strip, here we have 10 strips/plane"
+    "Noise rate in Hertz per strip is set in detector cards. Second argument here is a multiplicative scale factor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_detector.add_noise('constant', 70*1e3*100)"
+    "my_detector.add_noise('constant', 1)"
    ]
   },
   {
@@ -110,7 +131,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Signal information:\n",
+      "\t\n",
+      "{'is_muon': False, 'x': -26.798506777877275, 'y': 28.315718295195914, 'z': 7460.5, 'ptype': 2, 'ptilt': 0, 'poffset': 1.6, 'time': -9.807241644137557, 'projX_at_rightend_x': -25.6, 'projX_at_rightend_y': 57.6, 'projX_at_middle_x': -25.6, 'projX_at_middle_y': 0.0, 'projY_at_topend_x': 57.6, 'projY_at_topend_y': -57.6, 'projY_at_middle_x': 0.0, 'projY_at_middle_y': -57.6, 'seg_ix': 9, 'rdrift': 1.4737490251255752}\n",
+      "Signal information:\n",
+      "\t\n",
+      "{'is_muon': False, 'x': -17.682554263087184, 'y': -43.99429137179755, 'z': 7460.5, 'ptype': 2, 'ptilt': 0, 'poffset': 1.6, 'time': -4.11231986506956, 'projX_at_rightend_x': -19.2, 'projX_at_rightend_y': 57.6, 'projX_at_middle_x': -19.2, 'projX_at_middle_y': 0.0, 'projY_at_topend_x': 57.6, 'projY_at_topend_y': -57.6, 'projY_at_middle_x': 0.0, 'projY_at_middle_y': -57.6, 'seg_ix': 11, 'rdrift': 0.943799101403784}\n",
+      "Signal information:\n",
+      "\t\n",
+      "{'is_muon': False, 'x': 53.104785807170124, 'y': 3.756494620743041, 'z': 7460.5, 'ptype': 2, 'ptilt': 0, 'poffset': 1.6, 'time': -1.5307322123198244, 'projX_at_rightend_x': 54.4, 'projX_at_rightend_y': 57.6, 'projX_at_middle_x': 54.4, 'projX_at_middle_y': 0.0, 'projY_at_topend_x': 57.6, 'projY_at_topend_y': -57.6, 'projY_at_middle_x': 0.0, 'projY_at_middle_y': -57.6, 'seg_ix': 34, 'rdrift': 1.4334704094474224}\n"
+     ]
+    }
+   ],
    "source": [
     "sigs = my_detector.get_signals()"
    ]
@@ -156,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure()\n",
+    "fig = plt.figure(figsize=(8,12))\n",
     "ax = plt.axes(projection='3d')\n",
     "plotting.plot_det_volume(my_detector, ax, draw_muon=1)"
    ]
@@ -178,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
